# SalvoAPI-Template

./: .gitignore  Cargo.toml  README.md  buildarm.sh
src/: error.rs  main.rs
src/config/: log_config.rs  mod.rs
src/routers/: hello.rs  mod.rs
