[package]
name = "salvoapi_template"
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
readme = "./README.md"

[dependencies]
anyhow = "1.0.102"
figment = { version = "0.10.19", features = ["env", "toml"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rust-embed = "8.11.0"
salvo = { version = "0.89.3", features = [
    "anyhow",
    "cookie",
    "cors",
    "jwt-auth",
    "oapi",
    "serve-static",
    "rustls",
    "logging",
    "test",
    "quinn",
] }
serde = "1.0.228"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
validator = { version = "0.20.0", features = ["derive"] }
ulid = "1.2.1"
cookie = "0.18.1"
dotenvy = "0.15.7"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json",
] }
rustls = { version = "0.23", features = ["ring"] }
toml = "1.1.0"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
